welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:41: error: not found: value setBrosseCouleur
		setBrosseCouleur(T(d))
                ^